crates/paideia-as-diagnostics/tests/snapshots/integration__render_human__multibyte_caret_alignment.snap
---
source: crates/paideia-as-diagnostics/tests/render_human.rs
assertion_line: 66
expression: rendered
---
error[E0001]: bad input

  --> test.pdx:1:5
   |
 1 | a家b cde
   |     ^^^
