crates/paideia-as-diagnostics/tests/snapshots/integration__render_human__no_primary_span_falls_back_to_summary.snap
---
source: crates/paideia-as-diagnostics/tests/render_human.rs
assertion_line: 110
expression: rendered
---
error[E0001]: missing primary
