crates/paideia-as-diagnostics/tests/snapshots/integration__render_human__synthetic_e0001_color_on.snap
---
source: crates/paideia-as-diagnostics/tests/render_human.rs
assertion_line: 44
expression: rendered
---
[1;31merror[0m[E0001]: [1munexpected token[0m

  --> test.pdx:1:5
   |
 1 | abc xyz
   |     ^^^
